# pilotmapapp

./: README.md
pilotmapapp/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
pilotmapapp/Backend/: boatKernel.cpp  boatKernel.h
pilotmapapp/Backend/Communication/: communicationManager.cpp  communicationManager.h
pilotmapapp/Backend/Utilities/: utilities.cpp  utilities.h
pilotmapapp/Widgets/: mapWidget.cpp  mapWidget.h
pilotmapapp/cmake/: Findmsgpack_.cmake
